add projects Added created projects to the site

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Syed Ali Hussnain | A Web Developer based in Lahore, Pakistan.
+    Praveen | Portfolio
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -25,8 +25,7 @@
     <div class="row">
       <nav class="nav" role="navigation">
         <ul class="nav__items">
-          <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-          <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>
+          <li class="nav__item"><a href="#work" class="nav__link">Projects</a></li>
           <li class="nav__item">
             <a href="#about" class="nav__link">About</a>
           </li>
@@ -40,10 +39,10 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Syed Ali Hussnain</span>
+          <span>Praveen</span><span class="blink1">.</span><span class="blink2">.</span><span class="blink3">.</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
+        <p>A Web Developer based in Tamil Nadu, India.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -55,29 +54,38 @@
 
     <section class="work" id="work">
       <div class="row">
-        <h2>My Work</h2>
+        <h2>React Projects</h2>
         <div class="work__boxes">
 
           <!-- Each div with the work__box class is a project. -->
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Portfolio Template</h3>
+              <h3>Pokedex</h3>
               <p>
-                A free Open Source Portfolio for anyone to use for free.
+                You can search your favourite pokemon and get the details of the pokemon.
+                A single page app that designed to fetch data from external source and displayed.
               </p>
               <ul class="work__list">
                 <li>HTML</li>
-                <li>SCSS</li>
-                <li>JavaScript</li>
-                <li>Parcel</li>
+                <li>CSS</li>
+                <li>Bootstrap </li>
+                <li>React</li>
               </ul>
-
+              <p>Used and learned technologies:</p>
+              <ul class="work__list">
+                  <li>Axios -A npm package for fetching data </li>
+                     <li>Used React hooks:</li>
+                      <ul><li>useState</li>
+                        <li>useEffect</li>
+                        <li>useRef</li></ul>
+                    </ul>
+                </ul>
               <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
+                <a href="https://praveen-webdev.github.io/pokedex/" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
+                <a href="https://github.com/praveen-webdev/pokedex/" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
@@ -88,80 +96,110 @@
           </div>
 
           <div class="work__box">
-            <div class="work__text">
-              <h3>Calculator</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
-              </p>
-              <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
-              </ul>
-
-              <div class="work__links">
-                <a href="#" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
-                </a>
+              <div class="work__text">
+                <h3>Artography</h3>
+                <p>
+                   A portfolio web app for showcasing sketch arts and a contact page.
+                </p>
+                <ul class="work__list">
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Bootstrap </li>
+                  <li>React</li>
+                </ul>
+                <p>Used and learned technologies:</p>
+                <ul class="work__list">
+                    <li>User experience</li>
+                    <li>React router - A npm package for routing react components</li>
+                    <li>Animate.css - An animation library for css</li>
+                    <li>Animate-on-scroll - npm package for scroll animation</li>
+                      </ul>
+                  </ul>
+                <div class="work__links">
+                  <a href="https://artography.netlify.app/" target="_blank" class="link__text">
+                    Visit Site <span>&rarr;</span>
+                  </a>
+                  <a href="https://github.com/praveen-webdev/Artography/" title="View Source Code" target="_blank">
+                    <img src="./images/github.svg" class="work__code" alt="GitHub">
+                  </a>
+                </div>
+              </div>
+              <div class="work__image-box">
+                <img src="./images/project-1.png" class="work__image" alt="Project 1" />
               </div>
             </div>
-            <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
-            </div>
-          </div>
 
           <div class="work__box">
-            <div class="work__text">
-              <h3>Notificator</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
-              </p>
-              <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
-              </ul>
-
-              <div class="work__links">
-                <a href="#" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
-                </a>
+              <div class="work__text">
+                <h3>Digicart</h3>
+                <p>
+                  A small e-commerce app project in which you can add products to cart with the quantity of the product and a checkout page with your added cart products.You can search and filter products.       
+                </p>
+                <ul class="work__list">
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Bootstrap</li>
+                  <li>React</li>
+                </ul>
+                <p>Used and learned technologies:</p>
+                <ul class="work__list">
+                    <li>React router - A npm package for routing react components</li>
+                    <li>Used React hooks:</li>
+                    <ul>
+                        <li>Context api - State management</li>
+                      <li>useContext</li>
+                      <li>useMemo</li>
+                      <li>useCallback</li>
+                  </ul>
+                <div class="work__links">
+                  <a href="https://digicart.netlify.app/" target="_blank" class="link__text">
+                    Visit Site <span>&rarr;</span>
+                  </a>
+                  <a href="https://github.com/praveen-webdev/digicart/" title="View Source Code" target="_blank">
+                    <img src="./images/github.svg" class="work__code" alt="GitHub">
+                  </a>
+                </div>
+              </div>
+              <div class="work__image-box">
+                <img src="./images/project-1.png" class="work__image" alt="Project 1" />
               </div>
             </div>
-            <div class="work__image-box">
-              <img src="./images/project-3.png" class="work__image" alt="Project 3" />
-            </div>
-          </div>
-        </div>
-      </div>
+
+            <div class="work__box">
+                <div class="work__text">
+                  <h3>Moviepedia</h3>
+                  <p>
+                      A react web app in which you can explore latest movies with filter and sort and also by searching movies.You can select your favourite movie to get title,description,voting,actors and also similar movies.You can also paginate movies.
+                  </p>
+                  <ul class="work__list">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Bootstrap</li>
+                    <li>React</li>
+                  </ul>
+                  <p>Used and learned technologies:</p>
+                  <ul class="work__list">
+                      <li>React router - A npm package for routing react components</li>
+                      <li>Axios - npm package for fetching datas</li>
+                      <li>react-paginate - npm package for pagination</li>
+                    <li>Created a custom hook for fetching datas</li>
+                      </ul>
+                  <div class="work__links">
+                    <a href="https://react-moviepedia.netlify.app/" target="_blank" class="link__text">
+                      Visit Site <span>&rarr;</span>
+                    </a>
+                    <a href="https://github.com/praveen-webdev/moviepedia" title="View Source Code" target="_blank">
+                      <img src="./images/github.svg" class="work__code" alt="GitHub">
+                    </a>
+                  </div>
+                </div>
+                <div class="work__image-box">
+                  <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+                </div>
+              </div>
     </section>
 
-    <!-- ***** Clients ***** -->
-
-    <section class="client" id="clients">
-      <div class="row">
-        <h2>Clients</h2>
-        <div class="client__logos">
-          <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
-          <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
-          <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
-          <img src="./images/mighty-furnitures.png" class="client__logo" alt="Company 1" />
-          <img src="./images/fastlane.png" class="client__logo" alt="Company 3" />
-          <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
-        </div>
-      </div>
-    </section>
+   
 
     <!-- ***** About ***** -->
 
