--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <span>Praveen</span><span class="blink1">.</span><span class="blink2">.</span><span class="blink3">.</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Tamil Nadu, India.</p>
+        <p>A Front-end Web Developer based in Tamil Nadu, India.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -125,7 +125,7 @@
                 </div>
               </div>
               <div class="work__image-box">
-                <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+                <img src="./images/project2.png" class="work__image" alt="Project 1" />
               </div>
             </div>
 
@@ -161,7 +161,7 @@
                 </div>
               </div>
               <div class="work__image-box">
-                <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+                <img src="./images/project-3.png" class="work__image" alt="Project 1" />
               </div>
             </div>
 
@@ -194,7 +194,7 @@
                   </div>
                 </div>
                 <div class="work__image-box">
-                  <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+                  <img src="./images/project-4.png" class="work__image" alt="Project 1" />
                 </div>
               </div>
     </section>
@@ -243,7 +243,7 @@
           me is via an email.
         </p>
         <!-- Replace the email with yours -->
-        <a href="mailto:you@example.com" class="btn">you@example.com</a>
+        <a href="mailto:praveenwebdevhub@gmail.com" target="_blank" class="btn">praveenwebdevhub@gmail.com</a>
       </div>
     </div>
   </section>
