add floating text

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Praveen</span><span class="blink1">.</span><span class="blink2">.</span><span class="blink3">.</span>
+          <div id="cloud">Praveen</div><span class="blink1">.</span><span class="blink2">.</span><span class="blink3">.</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
         <p>A Front-end Web Developer based in Tamil Nadu, India.</p>
