--- a/index.html
+++ b/index.html
@@ -198,6 +198,38 @@
                   <img src="./images/project-4.png" class="work__image" alt="Project 1" />
                 </div>
               </div>
+              
+          <div class="work__box"  >
+            <div class="work__text" data-aos="fade-up">
+              <h3>Blog</h3>
+              <p>
+                You can post articles and it can be read by anyone on this website.
+              </p>
+              <ul class="work__list">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>ReactJs</li>
+                <li>Firebase</li>
+              </ul>
+              <p>Used and learned technologies:</p>
+              <ul class="work__list">              
+                     <li>Firebase authentication with google provider</li>
+                      <li>Firebase-Cloud firestore for database</li>
+                    </ul>
+                </ul>
+              <div class="work__links">
+                <a href="http://firebase-blogging.netlify.app/" target="_blank" class="link__text">
+                  Visit Site <span>&rarr;</span>
+                </a>
+                <a href="https://github.com/Praveen-webdev/react-blog/" title="View Source Code" target="_blank">
+                  <img src="./images/github.svg" class="work__code" alt="GitHub">
+                </a>
+              </div>
+            </div>
+            <div class="work__image-box"data-aos="fade-left"data-aos-once="true" data-aos-duration="2000">
+              <img src="./images/react-blog.jpg" class="work__image" alt="Project 1" />
+            </div>
+          </div>
     </section>
 
    <!-- ***** Teck stack ***** -->
@@ -280,7 +312,7 @@
           <div class="about__text" data-aos="fade-up">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              I am currently pursuing Civil engineering at Government college of engineering,Salem.At the end of the second year developed an interest in Web development. So, I started to learn myself with w3schools and with some Udemy courses to become a front-end web developer. Looking for my first job to work with!
+                Hello, this is Praveen and I’m currently looking for opportunities in the field of software development with a focus on developing Awesome web apps. I’ve obtained knowledge on various technologies and practicing more on that to improve my skills/exposure to reach my Goal.
             </p>
             <!-- Provide a link to your resume -->
             <a href="#" class="btn">My Resume</a>
@@ -338,7 +370,7 @@
         </li>
       </ul>
       <p>
-        &copy; 2021 - Developed by Praveen.
+        &copy; 2022 - Developed by Praveen.
       </p>
   </footer>
 
