--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="work__text" data-aos="fade-up">
               <h3>Blog</h3>
               <p>
-                You can post articles and it can be read by anyone on this website.
+                  Can share your blog with everyone on this platform.
               </p>
               <ul class="work__list">
                 <li>HTML</li>
@@ -213,7 +213,7 @@
               </ul>
               <p>Used and learned technologies:</p>
               <ul class="work__list">              
-                     <li>Firebase authentication with google provider</li>
+                     <li>Firebase authentication using google provider</li>
                       <li>Firebase-Cloud firestore for database</li>
                     </ul>
                 </ul>
@@ -315,9 +315,8 @@
                 Hello, this is Praveen and I’m currently looking for opportunities in the field of software development with a focus on developing Awesome web apps. I’ve obtained knowledge on various technologies and practicing more on that to improve my skills/exposure to reach my Goal.
             </p>
             <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
+            <a href="./resume/praveen_IT.pdf" download="resume" class="btn">My Resume</a>
           </div>
-
           <div class="about__photo-container" data-aos="zoom-in-up" data-aos-duration="800" data-aos-once="true">
             <!-- Add a nice photo of yourself -->
             <img class="about__photo" src="./images/praveen-profile.png" alt="profile" />
